5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1716_2503.log
== TEST (2019-05-14 16:28:27) 
-- CODE:
n=int(input("entrada: "))
s=0
t=1
e=1
while(t<n):
	s=s+(-4/t)*(-1**e)
	t=t+2
	e=e+1
print(s)
	
	
	
-- OUTPUT:
12.366053483627725
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:32:11) 
-- CODE:
n=int(input("entrada: "))
s=0
t=1
e=1
while(e<n):
	s=s+(-4/t)*((-1)**e)
	t=t+2
	e=e+1
print(round(s,8)
	
	
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:32:22) 
-- CODE:
n=int(input("entrada: "))
s=0
t=1
e=1
while(e<n):
	s=s+(-4/t)*((-1)**e)
	t=t+2
	e=e+1
print(round(s,8)
	
	
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:32:39) 
-- CODE:
n=int(input("entrada: "))
s=0
t=1
e=1
while(e<=n):
	s=s+(-4/t)*((-1)**e)
	t=t+2
	e=e+1
print(round(s,8)
	
	
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:36:44) 
-- CODE:
n=int(input("entrada: "))
s=0
t=1
e=1
while(e<=n):
	s=s+(-4/t)*((-1)**e)
	t=t+2
	e=e+1
print(round(s,8)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:11) 
-- CODE:
n=int(input("entrada: "))
s=0
t=1
e=1
while(e<=n):
	s=s+(-4/t)*((-1)**e)
	t=t+2
	e=e+1
print(round(s,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:22) 
-- CODE:
n=int(input("entrada: "))
s=0
t=1
e=1
while(e<=n):
	s=s+(-4/t)*((-1)**e)
	t=t+2
	e=e+1
print(round(s,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:30) 
-- CODE:
n=int(input("entrada: "))
s=0
t=1
e=1
while(e<=n):
	s=s+(-4/t)*((-1)**e)
	t=t+2
	e=e+1
print(round(s,8))
-- EXECUTION TIME:
0.141948
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
